<resources>
    <string name="host_service">http://191.241.243.133:8081</string>
    <string name="app_version">3.9.0</string>
    <string name="master_password">tbmvc</string>
    <string name="image_service_project_id">digitalizacao-174822</string>
    <string name="test_bucket">gunsandroses-909459-dontcry-571723</string>
    <string name="prod_bucket">saopaulo-blackbirds-imagens-174822</string>
    <string name="app_name">Flash_portuguese</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="beta" />
    <string name="app_copyright_version">Version</string>
    <string name="form_adapter_validation">"{{form_label}}" é obrigatório</string>
    <string name="app_accesibility_description">The permission serves to better assist users in using the application, improving usability.</string>
    <string name="hint">Nome</string>
    <string name="iden">Identificação</string>
    <string name="titlebar_image">Flash Logo</string>
    <string name="actionbar_title">Sem Lista</string>
    <string name="permissions_request">Algumas permissões são necessárias para o uso do aplicativo, prossiga para habilitar</string>
    <string name="Login_screen1">Atenção</string>
    <string name="Login_screen2">Informe a senha master</string>
    <string name="Login_screen3">Host Servidor</string>
    <string name="Login_screen4">Voltar</string>
    <string name="Login_screen5">Identificação não foi preenchido</string>
    <string name="Login_screen6">Login não foi preenchido</string>
    <string name="Login_screen7">Senha não foi preenchido</string>
    <string name="Login_screen8">O usuário não tem permissao para acessar o recurso</string>
    <string name="Login_screen9">Informe a senha master</string>
    <string name="Login_screen10">Senha incorreta</string>
    <string name="Login_screen11">Selecione o host</string>
    <string name="Login_screen12">Sem internet</string>
    <string name="main_entrega">Entrega</string>
    <string name="main_devolucao">Devolução</string>
    <string name="main_coleta">Coleta</string>
    <string name="main_pesquisa">Pesquisa</string>
    <string name="main_lista">Lista</string>
    <string name="main_ajuda">Ajuda</string>
    <string name="configurar_host">Host Servidor</string>
    <string name="configurar_host_bigdata">Host Servidor BigData</string>
    <string name="configurar_usuario">Identificação</string>
    <string name="configurar_login">Login</string>
    <string name="configurar_senha">Senha</string>
    <string name="configurar_tipo">Tipo</string>
    <string name="hawb_hint">Digite a hawb</string>
    <string name="lista_entregues">Hawbs entregues</string>
    <string name="lista_devolvidas">Hawbs devolvidas</string>
    <string name="lista_pendentes">Hawbs pendentes</string>
    <string name="lista_aguardando_sincronizar">Sincronizar hawb</string>
    <string name="lista_aguardando_sincronizar_imagens">Sincronizar imagens</string>
    <string name="lista_coletas_pendente">Coletas pendentes</string>
    <string name="lista_coletas_feitas">Coletas feitas</string>
    <string name="lista_coletas_feitass">tbmvc</string>
    <string name="lista_coletas_aguardando_sincronizar">Coletas aguardando\nsincronizar</string>
    <string name="lista_coletas_aguardando_sincronizar_imagens">Imagens de coleta\naguardando sincronizar</string>
    <string name="lista_default">0</string>
    <string name="button_confirmar">Confirmar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="button_voltar">Voltar</string>
    <string name="menu_title">Menu</string>
    <string name="menu_configurar">Configurar</string>
    <string name="menu_apagar_lista">Apagar lista aberta</string>
    <string name="menu_limpar_dados">Limpar dados</string>
    <string name="menu_restaurar">Restaurar</string>
    <string name="coleta_escanear">Escanear QR Code</string>
    <string name="coleta_digitar">Digitar coleta</string>
    <string name="coleta_id">Coleta: 000015151</string>
    <string name="coleta_lista_item_icon">IC</string>
    <string name="coleta_lista_item_name">00016547</string>
    <string name="coleta_lista_item_address">Rua Exemplo 123, Sala 5, 01525–000, São Paulo - SP</string>
    <string name="coleta_lista_item_start">Iniciar</string>
    <string name="entrega_foto_local">Tirar foto do local</string>
    <string name="pesquisa_buscar">Buscar pesquisa</string>
    <string name="pesquisa_iniciar">Abrir Pesquisa</string>
    <string name="pesquisa_finalizar">Enviar Respostas</string>
    <string name="side_nav">Apagar lista aberta</string>
    <string name="list_screen1">Insira um código de lista válido</string>
    <string name="list_screen2">Preencha os detalhes acima primeiro</string>
    <string name="list_screen3">Tentativas: </string>
    <string name="list_screen4">Foto salvo com sucesso</string>
    <string name="list_screen5">Nenhuma lista para entregar, sincronize para atualizar as listas</string>
    <string name="check_list1"> TODAS AS ENTRADAS, SAÍDAS, AMBIENTES DE MANUSEIO E CUSTÓDIA SÃO MONITORADOS PERMANENTEMENTE? *</string>
    <string name="check_list2">FOTOGRAFE UMA ENTRADA, SAÍDA, AMBIENTE DE MANUSEIO OU CUSTÓDIA COM MONITORAMENTO *</string>
    <string name="check_list3">POSSUI SISTEMA DE CFTV COM GRAVAÇÃO DE IMAGENS? *</string>
    <string name="check_list4">FOTOGRAFE O SETOR DE MONITORAMENTO DAS IMAGENS *</string>
    <string name="check_list5">POSSUI VIGILÂNCIA? *</string>
    <string name="check_list6">QUANTIDADE DE VIGILANTES</string>
    <string name="check_list7">POSTOS DE OBSERVAÇÃO</string>
    <string name="check_list8">FOTOGRAFE O ESQUEMA DE VIGILÂNCIA EM FUNCIONAMENTO</string>
    <string name="check_list9">OS FUNCIONÁRIOS CIRCULAM LIVREMENTE ENTRE OS AMBIENTES? *</string>
    <string name="check_list10">A(S) ENTRADA(S) E SAÍDA(S) DE VEÍCULOS POSSUI PORTÕES COM SISTEMA DE ECLUSA/ENCLAUSURAMENTO? *</string>
    <string name="check_list11">FOTOGRAFE A ENTRADA/SAÍDA DE VEÍCULOS *</string>
    <string name="check_list12">EXISTE UM PCN(PLANO DE CONTINUIDADE DE NEGÓCIO) APROVADO E TESTADO? *</string>
    <string name="check_list13">SE SIM, ENCAMINHAR/ANEXAR DOCUMENTO COMPROBATÓRIO/TESTES</string>
    <string name="check_list14">COMENTÁRIOS/OBSERVAÇÕES</string>
    <string name="check_list15">EXISTE HISTÓRICO DE SINISTRO NOS ÚLTIMOS 24 MESES? SE SIM, DETALHAR E INFORMAT PROVIDÊNCIAS TOMADAS. *</string>
    <string name="check_list16">PROVIDÊNCIAS TOMADAS</string>
    <string name="check_list17">AS IMAGENS GRAVADAS FICAM NO MESMO PRÉDIO? *</string>
    <string name="check_list18">SE NÃO, ONDE?</string>
    <string name="check_list19">POSSUI SISTEMA DE ALARME? *</string>
    <string name="check_list20">TIPO DO SISTEMA DE ALARME (SE HOUVER)</string>
    <string name="check_list21">LOCAIS COBERTOS PELO SISTEMA DE ALARME (SE HOUVER)</string>
    <string name="check_list22">FOTOGRAFE O SISTEMA DE ALARME (SE HOUVER)</string>
    <string name="check_list23">HÁ CERCAS ELÉTRICAS NO PERÍMETRO DA EMPRESA? *</string>
    <string name="check_list24">FOTOGRAFE A CERCA ELÉTRICAS (SE HOUVER)</string>
    <string name="check_list25">ALGUM TELHADO OU ENTRADA ABERTOS? *</string>
    <string name="check_list26">SE SIM, COMO CONTROLA?</string>
    <string name="check_list27">FOTOGRAFE O DUTO DE VENTILAÇÃO ABERTO (SE HOUVER)</string>
    <string name="check_list28">HÁ ILUMINAÇÃO ADEQUADA EM TODO O PERÍMETRO? *</string>
    <string name="check_list29">FOTOGRAFE UM LOCAL COM ILUMINAÇÃO ADEQUADA *</string>
    <string name="check_list30">HÁ SISTEMA DE ILUMINAÇÃO DE EMERGÊNCIA? *</string>
    <string name="check_list31">FOTOGRAFE O SISTEMA DE ILUMINAÇÃO DE EMERGÊNCIA (SE HOUVER)</string>
    <string name="check_list32">HÁ SISTEMA DE CONTROLE DE ENTRADE E SAÍDA DE FUNCIONÁRIOS E VISITANTES? *</string>
    <string name="check_list33">FOTOGRAFE O SISTEMA DE CONTROLE DE ENTRADE SAÍDA DE FUNCIONÁRIOS E VISITANTES (SE HOUVER)</string>
    <string name="check_list34">TODO PERÍMETRO DA EMPRESA ESTÁ COBERTO POR CÂMERAS, INCLUSIVE O AMBIENTE DO COFRE? *</string>
    <string name="check_list35">FOTOGRAFE ALGUMA ÁREA COM VIGILÂNCIA POS CÂMERA *</string>
    <string name="check_list36">HÁ CONTROLE DE ENTRADA E SAÍDA DE PACOTES/ENTREGAS? *</string>
    <string name="check_list37">HÁ CONTROLE PARA PREVENIR QUE VISITANTES ANDEM LIVREMENTE POR TODO O PERÍMETRO DA EMPRESA? *</string>
    <string name="check_list38">SÃO EMITIDOS CRACHÁS OU IDENTIFICAÇÕES ESPECIAIS PARA VISITANTES? *</string>
    <string name="check_list39">OS AMBIENTES MANUSEIO E COFRE SÃO DEVIDAMENTE SEGREGADOS E POSSUEM CONTROLE DE ACESSO? *</string>
    <string name="check_list40">FOTOGRAFE A SEPARAÇÃO ENTRE OS AMBIENTES DE MANUSEIO E COFRE *</string>
    <string name="check_list_Image">📷  Clique para tirar a foto</string>
    <string name="respondente1">RESPONSÁVEL PELAS INFORMAÇÕES DESTA PESQUISA *</string>
    <string name="respondente2">AS INFORMAÇÕES NESTA PESQUISA FORAM PRESTADAS COM VERACIDADE E ASSUMO INTEGRAL RESPONSABILIDADE PELAS MESMAS.
    DECLARO ESTAR CIENTE DE QUE A FALSIDADE NAS INFORMAÇÕES IMPLICARÁ NAS PENALIDADES CABÍVEIS COMPROMETO-ME Á COMUNICAR
    A TICKET QUAISQUER ALTERAÇÕES NESTAS INFORMAÇÕES NUM PRAZO MAXIMO DE 07 DIAS.</string>
    <string name="respondente3">ASSINATURA DO GERENTE/DIRETOR RESPONSÁVEL *</string>
    <string name="respondente4">Clique para assinar</string>
    <string-array name="device_type">
        <item>Corporativo</item>
        <item>Particular</item>
    </string-array>
    <string-array name="coleta_action">
        <item>Coletado</item>
        <item>Não coletado</item>
    </string-array>
    <string-array name="pesquisa_action">
        <item>Respondido</item>
        <item>Não respondido</item>
    </string-array>
    <string-array name="grau_relacionamento">
        <item>-- Selecionar parentesco --</item>
        <item>1 - Próprio</item>
        <item>2 - Mãe</item>
        <item>3 - Pai</item>
        <item>21 - Irmão</item>
        <item>4 - Portaria</item>
        <item>7 - Funcionário</item>
        <item>14 - Esposa</item>
        <item>15 - Esposo</item>
        <item>6 - Segurança</item>
        <item>16 - Recepção</item>
        <item>8 - Empregada</item>
        <item>5 - Secretário</item>
        <item>9 - Filho</item>
        <item>12 - Avô</item>
        <item>18 - Sogro</item>
        <item>10 - Tio</item>
        <item>11 - Sobrinho</item>
        <item>17 - Primo</item>
        <item>25 - Neto</item>
        <item>22 - Noivo</item>
        <item>23 - Cunhado</item>
        <item>24 - Genro</item>
        <item>13 - Procurador</item>
        <item>19 - Inquilino</item>
        <item>20 - Síndico</item>
        <item>26 - Resp. Autorizado</item>
        <item>0 - Agência</item>
        <item>51 - Caixa de Correspondência</item>
        <item>52 - Entregue Sob a Porta</item>
        <item>50 - Deixado Na Varanda</item>
        <item>53 - Garagem</item>
    </string-array>
</resources>