<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".Fragments.ResearchTwo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/check_list1"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/researchRGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg"
                android:buttonTint="@color/bg"
                android:paddingRight="280dp"
                android:text="Sim"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg"
                android:buttonTint="@color/bg"
                android:paddingRight="280dp"
                android:text="Não"
                android:textSize="15sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list2"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/photo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="Clique para tirar a foto" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="165dp"
                android:layout_marginTop="11dp"
                android:src="@drawable/ic_time" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list3"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/researchRGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg"
                android:buttonTint="@color/bg"
                android:paddingRight="280dp"
                android:text="Sim"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg"
                android:buttonTint="@color/bg"
                android:paddingRight="280dp"
                android:text="Não"
                android:textSize="15sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list4"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/photo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="Clique para tirar a foto" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="165dp"
                android:layout_marginTop="11dp"
                android:src="@drawable/ic_time" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list5"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/researchRGroup3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg"
                android:buttonTint="@color/bg"
                android:paddingRight="280dp"
                android:text="Sim"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg"
                android:buttonTint="@color/bg"
                android:paddingRight="280dp"
                android:text="Não"
                android:textSize="15sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list6"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/vigilantes"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_grey_border"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list7"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/observacao"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_grey_border"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list8"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/photo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="Clique para tirar a foto" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="165dp"
                android:layout_marginTop="11dp"
                android:src="@drawable/ic_time" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list9"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/researchRGroup4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg"
                android:buttonTint="@color/bg"
                android:paddingRight="280dp"
                android:text="Sim"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg"
                android:buttonTint="@color/bg"
                android:paddingRight="280dp"
                android:text="Não"
                android:textSize="15sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list10"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/researchRGroup5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg"
                android:buttonTint="@color/bg"
                android:paddingRight="280dp"
                android:text="Sim"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg"
                android:buttonTint="@color/bg"
                android:paddingRight="280dp"
                android:text="Não"
                android:textSize="15sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list11"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/photo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="Clique para tirar a foto" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="165dp"
                android:layout_marginTop="11dp"
                android:src="@drawable/ic_time" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list12"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/researchRGroup6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg"
                android:buttonTint="@color/bg"
                android:paddingRight="280dp"
                android:text="Sim"
                android:textSize="15sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bg"
                android:buttonTint="@color/bg"
                android:paddingRight="280dp"
                android:text="Não"
                android:textSize="15sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list13"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/photo5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="Clique para tirar a foto" />

            <ImageView
                android:id="@+id/image5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="165dp"
                android:layout_marginTop="11dp"
                android:src="@drawable/ic_time" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:text="@string/check_list14"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/comments"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_grey_border"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

    </LinearLayout>

</ScrollView>